@@ -1,4 +1,5 @@
 HEAD
+	+ Now groups can be provisioned for OpenChange
 	+ Disable Vacations feature from SOGo webmail
 	+ Remove z-push support in favor of sogo-activesync
 	+ Disable SOGo login for user accounts without mail enabled
